# aipose

./: .codespellrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  mkdocs.yml  mypy.ini  notebook.ipynb  pyproject.toml  pytest.ini  requirements-docs.txt  yolov7-w6-pose.pt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md  task.md
.github/workflows/: bump-version.yml  create-release.yml  publish-packabe.yml  publish-package.yml
aipose/: __main__.py  model.py  plot.py  utils.py  webcam.py
aipose/downloader/: __init__.py
aipose/filters/: __init__.py
aipose/frame/: __init__.py  frame_manager_base.py  frame_plot.py  frame_yolo_v7.py
aipose/models/: yolov7.py
aipose/models/yolo/: domain.py  types.py
aipose/models/yolov7/: domain.py  types.py
aipose/stream/: __init__.py
aipose/webcam/: __init__.py  frame_managers.py
docs/: api.md  frame_manager_availables.md  index.md  models.md  requirements.txt  usage.md  yolov7.md
docs/javascript/: readthedocs.js
docs/source/: conf.py  frame_manager_availables.rst  index.rst  usage.rst  video_stream.rst  yolov7.rst
notebooks/: Improve pose detection.ipynb  Pose_Classificator.ipynb  Yolo v7 bounding boxes.ipynb  custom manager.ipynb  plot_keypoints.ipynb  pose_similarity.ipynb  process_and_save_video.ipynb  process_keypoints.ipynb  turn_people.ipynb  video.ipynb  webcam.ipynb
pypose/: __main__.py  model.py  plot.py  webcam.py
